--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ body {
     display: flex;
     justify-content: space-between;
     padding: 10px 20px;
+    overflow: hidden;
 }
 
 .logo {
@@ -92,7 +93,7 @@ body {
     background: transparent;
     background-color: #272626;
     width: 60vmin;
-    padding: 6px;
+    padding: .5rem 1rem;
 }
 .container{
     width: 100vw;
@@ -100,19 +101,79 @@ body {
     /* justify-content: center; */
     align-items: center;
     gap: 10px;
-    padding: .5rem 1rem;
+    padding: .5rem .5rem;
 }
 .left{
     width: 17vw;
     box-sizing: border-box;
-    border: 2px solid white;
+    /* border: 2px solid white; */
     padding: .5rem 1rem ;
     border-radius: 6px;
+    overflow: auto;
+    height: 73vh;
+    background-color: #0c0c0c;
+}
+.head{
+    display: flex;
+    align-items: center;
+    gap:.5rem;
+    font-weight: 700;
+}
+.head img{
+    width: 1.5rem;
 }
 .right{
-    width:80vw;
-    border: 2px solid white;
+    width:81vw;
+    background-color: #0c0c0c;
+    /* border: 2px solid white; */
     border-radius: 6px;
     box-sizing: border-box;
     padding: .5rem 1rem ;
+    overflow: auto;
+    min-height: 73vh;
+}
+
+/*css for playbar*/
+.playlist{
+    width: 100vw;
+    background-color: #01181b;
+    display: flex;
+    flex-direction: column;
+    justify-content:space-between;
+    align-items: center;
+    padding: .5rem;
+    /* gap: .8rem; */
+    position: fixed;
+    bottom: 0;
+    box-sizing: border-box;
+}
+.playbar{
+    display: flex;
+    width: 90%;
+    padding: .5rem;
+    /* justify-content: space-between; */
+    justify-content: space-around;
+}
+.name,.volume-time{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.back,.play,.next{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.buttons{
+    display: flex;
+    gap: .8rem;
+}
+.buttons img{
+    width: 2.5rem;
+    cursor: pointer; 
+    padding: .3rem;   
+}
+.buttons img:hover{
+    border-radius: 50%;
+    background-color: #ffffff14;
 }
